experimental/ir/testdata/options/values/oneof.proto.stderr.txt
error: oneof `buf.test.Foo.o` set multiple times
  --> testdata/options/values/oneof.proto:22:21
   |
22 | option (x) = {a: 1, b: {}};
   |               -     ^ ... also set here
   |               |
   |               first set here...
23 | option (y).b.a = 1;
...
28 |     oneof o {
   |           - not a repeated field
   |
   = note: at most one member of a oneof may be set by an option

error: oneof `buf.test.Foo.o` set multiple times
  --> testdata/options/values/oneof.proto:24:8
   |
23 | option (y).b.a = 1;
   |        ------- first set here...
24 | option (y).b.b = {};
   |        ^^^^^^^ ... also set here
25 | option (y).a = 2;
...
28 |     oneof o {
   |           - not a repeated field
   |
   = note: at most one member of a oneof may be set by an option

error: oneof `buf.test.Foo.o` set multiple times
  --> testdata/options/values/oneof.proto:25:8
   |
23 | option (y).b.a = 1;
   |        ----- first set here...
24 | option (y).b.b = {};
25 | option (y).a = 2;
   |        ^^^^^ ... also set here
...
28 |     oneof o {
   |           - not a repeated field
   |
   = note: at most one member of a oneof may be set by an option

encountered 3 errors
